# simulation_ne_rl

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
rl_practice/: cartpole.py  frozenlake_q_iteration.py  frozenlake_q_learning.py  frozenlake_v_iteration.py
rl_practice/advanced_dqn/: dqn_basic.py  dqn_distrib.py  dqn_double.py  dqn_dueling.py  dqn_n_steps.py  dqn_noisy_net.py  dqn_prio_replay.py  dqn_rainbow.py
rl_practice/advanced_dqn/lib/: common.py  dqn_extra.py  dqn_model.py
rl_practice/dqn/: dqn_play.py  dqn_pong.py
rl_practice/dqn/lib/: wrappers.py
rl_practice/ptan/: experience.py
rl_practice/speed_up_dqn/: parallel.py
simulation/: dqn_agent.py  foods.py  main_simulation.py  model.py  replay_buffer.py  units.py
