[tool.pytest.ini_options]
pythonpath = [
  ".", "simulation"
]

[tool.poetry]
name = "simulation-ne-rl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "simulation_ne_rl"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
torch = "^1.13.1"
deap = "^1.3.3"
numpy = "^1.24.1"
scipy = "^1.9"
gym = "^0.26.2"
wandb = "^0.13.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
